--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # belong in git's global ignore instead:
 # `$XDG_CONFIG_HOME/git/ignore` or `~/.config/git/ignore`
 
+# Ignore swap files
+*.swp
+
 # Ignore bundler config.
 /.bundle
 
