--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
